MDEV-16937 Strict SQL with system versioned tables causes issues

Vers SQL: respect system fields in NO_ZERO_DATE mode.

This is the subject for refactoring in tempesta-tech/mariadb#379